[project]
name = "myst"
version = "0.0.2"
description = "Open-source simulation engine for environmental claims"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jaden Ryu" }
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"